# song-lyrics-generator

./: .gitignore  pyproject.toml  readme.md  scrape_genius.ipynb  scrape_genius.py  transfer-learning-gpt-2-writes-gangster-rap.ipynb  transfer-learning-gpt-2.ipynb
artist_dataset_ymls/: bad_german_gangster_rappers.yml  english_rappers.yml
